--- a/container_status_app/templates/container_status/nas_faqs.html
+++ b/container_status_app/templates/container_status/nas_faqs.html
@@ -29,7 +29,11 @@
                         <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#{{ faq_type_key }}FAQ" aria-expanded="false" aria-controls="{{ faq_type_key }}FAQ">
                             <span class="text-white" style="font-size:larger;">{{ faq_type_key.upper() }}</span>
                         </button>
-                        <small class="text-white">Click to expand</small>
+                        {% if faq_dicts|length > 0 %}
+                            <small class="text-white">Click to expand</small>
+                        {% else %}
+                            <small class="text-white">No FAQ content added yet.</small>
+                        {% endif %}
                     </div>
                     {% for faq_title, faq_content in faq_dicts.items() %}
                         <div id="{{ faq_type_key }}FAQ" class="collapse" aria-labelledby="{{ faq_type_key }}FAQheading" data-parent="#{{ faq_type_key }}FAQaccordion">
@@ -46,7 +50,6 @@
                                         {% endif %}
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                     {% endfor %}
@@ -59,6 +62,7 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="../../static/bootstrap.min.js"></script>
     <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
     <link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
