--- a/container_status_app/templates/container_status/nas_add_faq.html
+++ b/container_status_app/templates/container_status/nas_add_faq.html
@@ -25,7 +25,7 @@
         <div class="card m-2">
             <h5 class="card-header bg-success">Add FAQ</h5>
             <div class="card-body">
-                <form method="POST" autocomplete="off">
+                <form method="POST" autocomplete="off" enctype="multipart/form-data">
                     {% for faq_type in faq_dict.keys() %}
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="radio" name="faq_type_radio" id="{{ faq_type }}Radio" value="{{ faq_type }}" required>
@@ -39,6 +39,10 @@
                     <div class="form-group">
                         <label for="faqContent">Answer</label>
                         <textarea class="form-control" name="faq_content" id="faqContent" rows="10"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="uploadFAQFile">Upload FAQ file</label>
+                        <input type="file" class="form-control-file" id="uploadFAQFile" name="faq_file">
                     </div>
                     <button type="submit" name="addFAQButton" class="btn btn-outline-success mt-2">Add</button>
                 </form>
