New feature to add FAQs by uploading a file for a category.
The file must follow a specific format of:
    Question:<the question>
    Answer:<the answer which can spready multiple lines>

The Question and Answer keys can be of a some variations.

--- a/container_status_app/templates/container_status/nas_add_faq.html
+++ b/container_status_app/templates/container_status/nas_add_faq.html
@@ -57,6 +57,18 @@
                             Automation Team
                         </div>
                     {% endif %}
+                {% else %}
+                    {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            {% for message in messages %}
+                                {% if message %}
+                                    <div class="alert alert-danger" role="alertdialog">
+                                        {{ message }}
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
                 {% endif %}
             </div>
         </div>
