Rename uscc logo pic.

--- a/container_status_app/templates/container_status/base.html
+++ b/container_status_app/templates/container_status/base.html
@@ -13,7 +13,7 @@
     <!-- Image and text -->
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
-            <img src="{{ url_for('static', filename='usc_logo.jpg') }}" width="30" class="d-inline-block align-top" alt="U.S. Cellular Logo">
+            <img src="{{ url_for('static', filename='uscc_logo.jpg') }}" width="30" class="d-inline-block align-top" alt="U.S. Cellular Logo">
             NAS Platform Status
         </a>
     </nav>
