--- a/container_status_app/templates/container_status/update_container_status.html
+++ b/container_status_app/templates/container_status/update_container_status.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
-            <img src={{ url_for('static', filename='usc_logo.jpg') }} width="30" class="d-inline-block align-top" alt="U.S. Cellular Logo">
+            <img src={{ url_for('static', filename='uscc_logo.jpg') }} width="30" class="d-inline-block align-top" alt="U.S. Cellular Logo">
             Update NAS Production Status
         </a>
 {#        <form method="POST">#}
