--- a/container_status_app/templates/container_status/nas_notify.html
+++ b/container_status_app/templates/container_status/nas_notify.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">Generate NAS Platform Notifications</h1>
+            <h1 class="display-4">Maintain NAS Platform and Application Status</h1>
         </div>
     </div>
     <div class="container">
